# rust_engine_frame

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
code_gen_tools/: gen_getter.py  gen_getter_parse.py  gen_getter_print.py
src/: attrs.rs  combat.rs  combats.rs  cores.rs  damage.rs  effects.rs  godot_ext_impl.rs  lib.rs  motion.rs  motions.rs  movements.rs
src/attrs/: dyn_attr.rs  dyn_attr_effect.rs  dyn_attr_effect_impl.rs  dyn_prop.rs  dyn_prop_dur_effect.rs  dyn_prop_dur_effect_impl.rs  dyn_prop_event.rs  dyn_prop_inst_effect.rs  dyn_prop_inst_effect_impl.rs  dyn_prop_period_effect.rs  dyn_prop_period_effect_impl.rs  effect_container.rs  event_prop.rs
src/combat/: combat_additions.rs  combat_entities.rs  combat_inherents.rs  combat_units.rs  damages.rs  equipments.rs
src/combats/: combat_additions.rs  combat_inherents.rs  combat_units.rs  damages.rs
src/cores/: static_timer.rs  tiny_timer.rs  unify_type.rs
src/damage/: damage_shield.rs
src/effects/: duration_effect.rs  instant_effect.rs  native_duration.rs  native_effect.rs
src/godot_ext_impl/: adapter.rs
src/motion/: abstracts.rs  action.rs  action_impl.rs  action_types.rs  behaviour.rs  movement.rs  movement_action.rs  movement_action_impl.rs  movement_behaviour.rs  movement_behaviour_impl.rs  movement_impl.rs  player_controller.rs  player_input.rs  player_instruction.rs  player_operation.rs  player_pre_input.rs  state_machine.rs  state_machine_action.rs  state_machine_action_impl.rs  state_machine_behaviour.rs  (+8 more)
tests/: bevy_tests.rs  state_machine_action_tests.rs
(+42 files in other folders)
